# serializer version: 1
# name: test_build_matrix_query_constructs_summarizecolumns
  '''
  EVALUATE
  SUMMARIZECOLUMNS(
      dim[City],
      "Sales", [Total Sales]
  )
  '''
# ---
# name: test_build_matrix_query_includes_filters
  '''
  EVALUATE
  CALCULATETABLE(
      SUMMARIZECOLUMNS(
          dim[City],
          "Sales", [Total Sales]
      ),
      dim[City] IN { "Seattle", "Portland" }
  )
  '''
# ---
